--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "fastify-plugin": "^5.1.0",
     "nanoid": "^5.0.5",
     "pino": "^8.19.0",
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
     "light-my-request": "^5.11.0"
